spent a lot of time making the button pixel perfect , truly a wonder

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,7 @@
 @module _variables
 @module mixin
 @import ./../../node_modules/bootstrap/scss/bootstrap.scss
-@module/modules/_navbar
-@module/modules/_main
-@module/modules/_footer
+@import ./modules/_styles
+@import ./modules/_navbar
+@import ./modules/_main
+@import ./modules/_footer
