--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11846,8 +11846,40 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-@module /modules/_navbar;
-@module /modules/_main;
-@module /modules/_footer;
+body {
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+nav div {
+  text-align: center;
+}
+nav div .cart-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid 0.5px;
+  gap: 0.5rem;
+}
+nav div .cart-button p {
+  margin: 0;
+}
+nav div .cart-button p:last-child {
+  border: none;
+  color: white;
+  background-color: black;
+  border-radius: 100%;
+  height: 1.5rem;
+  width: 1.5rem;
+  padding: 0;
+  font-weight: bolder;
+}
+nav div .cart-button img {
+  position: relative;
+  top: 0.7;
+}
+nav div .cart-button .cart-button:hover {
+  background-color: white !important;
+}
 
 /*# sourceMappingURL=app.css.map */
