enough for the day , start stronger & faster tomorrow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11847,6 +11847,7 @@ textarea.form-control-lg {
   }
 }
 body > *:not(header, footer) {
+  margin: 0;
   margin-left: 15%;
   margin-right: 15%;
 }
