--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,5 +3,6 @@
 @import ./../../node_modules/bootstrap/scss/bootstrap.scss
 @import ./modules/_styles
 @import ./modules/_navbar
+@import ./modules/_header
 @import ./modules/_main
 @import ./modules/_footer
