--- a/src/sass/modules/_navbar.sass
+++ b/src/sass/modules/_navbar.sass
@@ -1,6 +1,8 @@
 nav     
     div 
         text-align: center
+        .start-boot 
+            margin-left: calc(var(--center-abs-margin) + 105px)
         .cart-button
             display: flex
             align-items: center
